# Decentralized-Social-Network

./: .gitignore  BUILD.bazel  Documentation.odt  LICENSE  README.md  ThePlan.md  ThePlan.rtf  dSN.cpp~
DSNApiLibrary/: chatServer.h
DSNApiLibrary/CommunicationLayer/: BUILD.bazel  Client.cpp  Client.h  Client_test.cpp  Server.cpp  Server.h  Server_test.cpp
DSNApiLibrary/DSNLib/: chat.h
Project/: #connectWindow.cpp#  #dSN.cpp#  #makefile#  .#chatServer.cpp  .#connectWindow.cpp  .#dSN.cpp  .gitignore  DSN  Setup for windows.txt  chat.cpp  chat.cpp~  chat.h  chat.h~  chatServer.cpp  chatServer.cpp~  chatServer.h  chatServer.h~  connectWindow.cpp  connectWindow.h  dSN.cpp  dSN.cpp~  eOpen.sh  eOpen.sh~  mainWindow.cpp  mainWindow.h  makefile  makefile~
Project/DSNApiLibrary/: makefile
Project/DSNAppExample/: DSN  Setup for windows.txt  connectWindow.cpp  connectWindow.h  mainWindow.cpp  mainWindow.h  makefile
Project/DSNServerLib/: chatServer.cpp
Project/wBin/: libpng-config
