package(default_visibility = ["//visibility:public"])

cc_library(
    name = "Client",
    srcs = ["Client.cpp"],
    hdrs = ["Client.h"],
    copts = ["-g", "-std=c++11", "-lpthread", "-fPIC"]
)

cc_library(
    name = "Server",
    srcs = ["Server.cpp"],
    hdrs = ["Server.h"],
    copts = ["-g", "-std=c++11", "-lpthread", "-fPIC"],
    deps = [":Client"]
)

cc_test(
    name = "Client_test",
    srcs = ["Client_test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main",
        ":Client",
    ],
)

cc_test(
    name = "Server_test",
    srcs = ["Server_test.cpp"],
    copts = ["-Iexternal/gtest/include"],
    deps = [
        "@gtest//:main",
        ":Server"
    ],
)